--- a/features.html
+++ b/features.html
@@ -38,8 +38,8 @@
                 <p>Monitor your energy consumption and optimize it to save on utility costs and reduce your environmental impact.</p>
             </div>
             <div class="card">
-                <h3>Waste Reduction</h3>
-                <p>Track your waste output and improve your recycling efforts with smart home automation suggestions.</p>
+                <h3>Advaise</h3>
+                <p>Give valuabe advaise to keep your system great!</p>
             </div>
         </section>
     </div>
